# deep-learning-project

./: LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt
conf/: logging.yml
src/deep_learning_project/: __init__.py  __main__.py
src/raccoon_spotter/: requirements.txt
tests/: test_run.py
