[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "deep_learning_project"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
deep-learning-project = "deep_learning_project.__main__:main"

[tool.kedro]
package_name = "deep_learning_project"
project_name = "deep-learning-project"
kedro_init_version = "0.19.2"
tools = [ "Linting", "Custom Logging", "Data Structure", "Kedro Viz",]
example_pipeline = "True"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true
select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
ignore = [ "E501",]

[project.entry-points."kedro.hooks"]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "deep_learning_project.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
